fix:scrollbar

--- a/asset/css/dashboard-ui.css
+++ b/asset/css/dashboard-ui.css
@@ -391,22 +391,22 @@ span.filter-option.pull-left {
 /* SCROLL BAR */
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
+  height: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #9b79ff;
-  border-radius: 10px;
+  background: #8023b4;
+  border-radius: 20px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #7954e9;
+  background: #8023b4;
 }
